--- a/seanSite/index.html
+++ b/seanSite/index.html
@@ -7,5 +7,8 @@
     <title>Anil</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>I'm Anil.</h1>
+    <h4>I am learning Web Development.</h4>
+  </body>
 </html>
