--- a/seanSite/index.html
+++ b/seanSite/index.html
@@ -9,7 +9,11 @@
     <link rel="icon" href="images/favicon.ico?v=2" />
   </head>
   <body>
-    <h1>I'm Anil.</h1>
-    <h4>I am learning Web Development.</h4>
+    <div class="top-container">
+      <h1>I'm Anil.</h1>
+      <p>I am learning Web Development.</p>
+    </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
   </body>
 </html>
