Consistent Coding starts from today

--- a/seanSite/index.html
+++ b/seanSite/index.html
@@ -13,7 +13,9 @@
       <h1>I'm Anil.</h1>
       <p>I am learning Web Development.</p>
     </div>
-    <div class="middle-container"></div>
+    <div class="middle-container">
+      <p>Let's Start Coding Regularly.</p>
+    </div>
     <div class="bottom-container"></div>
   </body>
 </html>
